tests/ui/lifetimes/elided-lifetime-in-const-param-type.stderr
error[E0412]: cannot find type `c` in this scope
  --> $DIR/elided-lifetime-in-const-param-type.rs:8:27
   |
LL | type A = dyn for<const B: c(&())> D;
   |                           ^ not found in this scope

error[E0658]: only lifetime parameters can be used in this context
  --> $DIR/elided-lifetime-in-const-param-type.rs:8:24
   |
LL | type A = dyn for<const B: c(&())> D;
   |                        ^
   |
   = note: see issue #108185 <https://github.com/rust-lang/rust/issues/108185> for more information
   = help: add `#![feature(non_lifetime_binders)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0412, E0658.
For more information about an error, try `rustc --explain E0412`.
